<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity3_1">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a03txtIntroduce"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a01txtNombre" />

        <EditText
            android:id="@+id/edMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a01txtApellidos" />

        <EditText
            android:id="@+id/edMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/a03txtSexo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rdGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rdMasculino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a03rdoMasculino" />

                <RadioButton
                    android:id="@+id/rdFemenino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a03rdoFemenino" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/a03txtAficiones" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/ckMusica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a03chkMusica" />

            <CheckBox
                android:id="@+id/ckLectura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a03chkLectura" />

            <CheckBox
                android:id="@+id/ckDeportes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a03chkDeportes" />

            <CheckBox
                android:id="@+id/ckViajar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a03chkViajar" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a03btnEnviar" />
</LinearLayout>