<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity1_1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a01txtNombre" />

    <EditText
        android:id="@+id/edMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Nombre" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a01txtApellidos" />

    <EditText
        android:id="@+id/edApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Apellidos" />

    <Button
        android:id="@+id/btnVerificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a01btnVeri" />

    <TextView
        android:id="@+id/tvCondiciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a01txtCondiciones" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a01btnVolver"
        android:drawableLeft="@drawable/ic_back"/>
</LinearLayout>